--- a/sass/_temp.scss
+++ b/sass/_temp.scss
@@ -53,20 +53,8 @@ a {
 }
 
 .main {
-    background: white;
-    height: 100%;
-    position: relative;
-    top: 70px;
-    z-index: 20;
-    background: white;
-    height: 100vh;
-    position: relative;
-    top: 80px;
-    z-index: 40;
-    width: 100%;
-    padding: 40px;
-
-    
+    padding: 100px 40px 40px;
+   
 }
 
 .nav-toggle {
